[gd_scene format=3 uid="uid://main001"]

[ext_resource type="Script" uid="uid://bnbbhsxehit0c" path="res://main.gd" id="1_main"]

[node name="Main" type="Node2D" unique_id=1542657908]
script = ExtResource("1_main")

[node name="UI" type="CanvasLayer" parent="." unique_id=492954144]

[node name="ScoreLabel" type="Label" parent="UI" unique_id=565645906]
offset_right = 280.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 28
text = "Pontos: 0"

[node name="MessageLabel" type="Label" parent="UI" unique_id=702935493]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Encontre o quadrado vermelho!"
horizontal_alignment = 1

[node name="ItemsLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 400.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = ""

[node name="Squares" type="Control" parent="." unique_id=945801387]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FadeLayer" type="CanvasLayer" parent="." unique_id=1526556980]
layer = 100

[node name="FadeRect" type="ColorRect" parent="FadeLayer" unique_id=257461890]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
